; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_lua.c_script_format_json.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_lua.c_script_format_json.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpv_node = type { i32 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"error\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @script_format_json to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @script_format_json(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.mpv_node, align 4
  %5 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i8* @mp_lua_PITA(i32* %6)
  store i8* %7, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @makenode(i8* %8, %struct.mpv_node* %4, i32* %9, i32 1)
  %11 = load i8*, i8** %3, align 8
  %12 = call i8* @talloc_strdup(i8* %11, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  store i8* %12, i8** %5, align 8
  %13 = call i64 @json_write(i8** %5, %struct.mpv_node* %4)
  %14 = icmp sge i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %1
  %16 = load i32*, i32** %2, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @lua_pushstring(i32* %16, i8* %17)
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @lua_pushnil(i32* %19)
  br label %26

21:                                               ; preds = %1
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @lua_pushnil(i32* %22)
  %24 = load i32*, i32** %2, align 8
  %25 = call i32 @lua_pushstring(i32* %24, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  br label %26

26:                                               ; preds = %21, %15
  %27 = load i8*, i8** %3, align 8
  %28 = call i32 @talloc_free_children(i8* %27)
  ret i32 2
}

declare dso_local i8* @mp_lua_PITA(i32*) #1

declare dso_local i32 @makenode(i8*, %struct.mpv_node*, i32*, i32) #1

declare dso_local i8* @talloc_strdup(i8*, i8*) #1

declare dso_local i64 @json_write(i8**, %struct.mpv_node*) #1

declare dso_local i32 @lua_pushstring(i32*, i8*) #1

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i32 @talloc_free_children(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
